--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.0.0",
     "jest": "^29.5.0",
+    "memfs": "^3.6.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
