--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,14 +15,14 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
 
       - name: Build and push Docker image
         run: |
-          docker build -t dummy-server .
-          docker tag dummy-server:latest ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
+          docker build -t meow-server .
+          docker tag meow-server:latest ${{ secrets.DOCKER_REPO_URL }}/meow-server:latest
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker push ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
+          docker push ${{ secrets.DOCKER_REPO_URL }}/meow-server:latest
 
       - name: SSH into EC2 instance and deploy
         uses: appleboy/ssh-action@master
@@ -31,7 +31,7 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.MY_EC2_SSH_KEY }}
           script: |
-            sudo docker pull ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
+            sudo docker pull ${{ secrets.DOCKER_REPO_URL }}/meow-server:latest
             sudo docker stop my-node-app || true
             sudo docker rm my-node-app || true
-            sudo docker run -d -p 3000:3000 --name my-node-app ${{ secrets.DOCKER_REPO_URL }}/dummy-server:latest
+            sudo docker run -d -p 3000:3000 --name my-node-app ${{ secrets.DOCKER_REPO_URL }}/meow-server:latest
